--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,4 @@ layout: default
 title: About this blog
 ---
 <h1>{{ page.title }}</h1>
-<p>Here's the info you wanted.</p>
+<p>We're getting this blog setup. Thanks, Hank Quinlan! You've been a big help.</p>
