Going for it: real blog

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: John Lukosky's Building Accessibility Blog
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>John Lukosky's Building Accessibility</h1>
+	<p>I needed a place to throw my thoughts and findings and this is it. I will periodically be adding posts related to accessibility and adding additional resources. Stay tuned.</p>
 </div><!-- /.blurb -->
