--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,5 @@ layout: default
 title: About this blog
 ---
 <h1>{{ page.title }}</h1>
-<p>We're getting this blog setup. Thanks, Hank Quinlan! You've been a big help.</p>
+<p>I'm <a href="https://www.linkedin.com/in/johnlukosky/">John Lukosky</a>. I'm a developer in the Seattle area specializing in accessibility.</p>
+<p>I'm getting this blog setup. Relax, I'm getting there.</p>
