--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: John Lukosky's Building Accessibility Blog
 ---
 <div class="blurb">
-	<h1>John Lukosky's Building Accessibility</h1>
+	<h1>Building Accessibility</h1>
 	<p>I needed a place to throw my thoughts and findings and this is it. I will periodically be adding posts related to accessibility and adding additional resources. Stay tuned.</p>
 </div><!-- /.blurb -->
