setup message in about

--- a/about/index.html
+++ b/about/index.html
@@ -4,4 +4,4 @@ title: About this blog
 ---
 <h1>{{ page.title }}</h1>
 <p>I'm <a href="https://www.linkedin.com/in/johnlukosky/">John Lukosky</a>. I'm a developer in the Seattle area specializing in accessibility.</p>
-<p>I'm getting this blog setup. Relax, I'm getting there.</p>
+<p>I'm still setting things up. Relax, I'm getting there.</p>
