--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: About this blog
 description: "Blog focusing primarily on web accessibility issues and solutions."
+ogimage: "https://jlukosky.github.io/assets/BA.png"
 ---
 <h1>{{ page.title }}</h1>
 <p>I'm <a href="https://www.linkedin.com/in/johnlukosky/">John Lukosky</a>. I'm a developer in the Seattle area specializing in accessibility.</p>
