--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: John Lukosky's Building Accessibility Blog
 description: "Blog focusing primarily on web accessibility issues and solutions."
+ogimage: "https://jlukosky.github.io/assets/BA.png"
 ---
 <div class="blurb">
 	<h1>Building Accessibility</h1>
