updating page's title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: John Lukosky's Building Accessibility Blog
+title: Home
 description: "Blog focusing primarily on web accessibility issues and solutions."
 ogimage: "https://jlukosky.github.io/assets/BA.png"
 ---
