check back soon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ ogimage: "https://jlukosky.github.io/assets/BA.png"
 ---
 <div class="blurb">
 	<h1>Building Accessibility</h1>
-	<p>This is my place for thoughts, findings, and notes. I will periodically be adding posts related to accessibility and adding additional resources. Stay tuned.</p>
+	<p>Thoughts, findings, and observations. Additional posts are in the pipeline so check back soon.</p>
 
 	<ul class="posts">
 
