nav, list and etc

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: "Blog focusing primarily on web accessibility issues and solutions.
 ogimage: "https://jlukosky.github.io/assets/BA.png"
 ---
 <div class="blurb">
-	<h1>Building Accessibility</h1>
+	<h1>Advancing Accessibility</h1>
 	<p>Thoughts, findings, and observations. Additional posts are in the pipeline so check back soon.</p>
 
 	<ul class="posts">
