--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ ogimage: "https://jlukosky.github.io/assets/BA.png"
 ---
 <div class="blurb">
 	<h1>Advancing Accessibility</h1>
-	<p>Thoughts, findings, and observations. Additional posts are in the pipeline so check back soon.</p>
+	<p>Brief thoughts, findings, and observations. Additional posts are in the pipeline so check back soon.</p>
 
 	<ul class="posts">
 		{% for post in site.posts %}
