--- a/tools/index.html
+++ b/tools/index.html
@@ -22,7 +22,7 @@ ogimage: "https://jlukosky.github.io/assets/BA.png"
     <li><a href="http://pauljadam.com/extension.html" target="_blank"><b>a11yTools Safari macOS</b></a> by <a href="http://pauljadam.com/" target="_blank">Paul J. Adam</a> <br>a11yTools is a collection of HTML Web Accessibility Testing Tools in one location in an Extension for Safari used for quick and easy Accessibility testing. Run your favorite Accessibility testing tool and then take a screenshot showing the a11y error to developers and designers.</li>
     <li><a href="http://pauljadam.com/extension.html" target="_blank"><b>a11yTools for iOS</b></a> by <a href="http://pauljadam.com/" target="_blank">Paul J. Adam</a><br> a11yTools is a collection of HTML Web Accessibility Testing Tools in one location on your iPhone and iPad for quick and easy Accessibility testing. Run your favorite Accessibility testing tool and easily take a screenshot on your phone showing the a11y error to developers and designers.</li>
 </ul>
- <h2>Color, Contrast, and Vision</h2>
+ <h2>Color, contrast, and vision</h2>
  <ul style="list-style:none;">
      <li><a href="https://developer.paciellogroup.com/resources/contrastanalyser/" target="_blank"><b>Color Contrast Analyser</b></a>&nbsp;by Paciello<br> The Colour Contrast Analyser (CCA) is a desktop application for Windows/macOS that helps determine the legibility of text and the contrast of visual elements, such as graphical controls and visual indicators. Includes WCAG 2.1 compliance indicators, entering colors or using a color picker, alpha transparency support, and a colour blindness simulator.</li>
      <li><a href="https://www.joedolson.com/tools/color-contrast.php"><b>Color Contrast Tester by Joe Dolson</b></a>
