yeah yeah makin it bold

--- a/tools/index.html
+++ b/tools/index.html
@@ -37,7 +37,7 @@ ogimage: "https://jlukosky.github.io/assets/BA.png"
 
 <h2>Content authoring</h2>
 <ul style="list-style:none;">
-    <li><a href="http://gunning-fog-index.com/" target="_blank">Gunning Fog</a> and <a href="http://www.readabilityformulas.com/free-readability-formula-tests.php" target="_blank">Flesch Reading Ease Test</a>. Reading-ease tests determine how easy copy is to read and understand. The easier copy is to understand, the more accessible it is - especially to users with cognitive impairments. Remember, users the rely on a screen reader face stressful cognitive loads on some pages – easy-to-read copy helps them navigate a site.</li>
+    <li><a href="http://gunning-fog-index.com/" target="_blank"><b>Gunning Fog</b></a> and <a href="http://www.readabilityformulas.com/free-readability-formula-tests.php" target="_blank"><b>Flesch Reading Ease Test</b></a>. Reading-ease tests determine how easy copy is to read and understand. The easier copy is to understand, the more accessible it is - especially to users with cognitive impairments. Remember, users the rely on a screen reader face stressful cognitive loads on some pages – easy-to-read copy helps them navigate a site.</li>
 </ul>
 
  <h2>PDF accessibility</h2>
